# SAC-election-portal

./: .gitignore  README.txt  candidates_sample.xlsx  requirements.txt  voterlist_sample.xlsx
Backend/: .~lock.pwdFile.xlsx#  app.py  auth.py  config.py  enroll.py  pyproject.toml
Backend/templates/: upload.html
DB/: sec_elec.sql
Frontend/sac-election/: package-lock.json  package.json
Frontend/sac-election/public/: index.html
Frontend/sac-election/src/: App.js  adminPage.js  candidateUploader.js  config.js  login.js  votersUploader.js  votingPage.js
Frontend/sac-election/src/style/: login.css
