[tool.poetry]
name = "sac_backend"
version = "0.1.0"
description = ""
authors = ["DragonPyli <codewizard001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
pandas = "^1.3.3"
Flask-MySQL = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
